# aiven_demo

./: .flake8  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
aiven_demo/src/: main.py
aiven_demo/src/kafka_services/: consumer.py  producer.py
aiven_demo/src/postgres/: setup.py
src/: main.py
src/kafka_services/: consumer.py
src/postgres/: setup.py
tests/: test_aiven_demo.py
