[tool.poetry]
name = "aiven_demo"
version = "0.1.0"
description = "A demo using Aiven services with Kafka and PostgreSQ"
authors = ["Jay Chiarella <jay.gch93@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
